--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ span{
 }
 /* hero section */
 .hero-section{
-    background-image: url("/hero_image.jpg");
+    background-image: url("hero_image.jpg");
     background-size: cover;
     height: 350px;
     display: flex;
@@ -220,7 +220,7 @@ ul a{
 .foot-logo{
     height: 60px;
     width: 100px;
-    background-image: url("/amazon_logo.png");
+    background-image: url("amazon_logo.png");
     background-size: cover;
 }
 .foot-panel4{
